# INF1002-Project

./: .gitignore  Marcus.txt  README.md  app.py  index.html  job_listing.csv  job_vs_salary.py  jobsalary.js  main.py  new.py  pie.json  pie.py  pie_chart.js  pyproject.toml  search.py  search_ky.py  skills.json  top10.py  top10skills.json  wordcloud.js
css/: main.css
js/: main.js
src/config/: constants.py
src/datasets/: job_listing.csv  training_data.spacy  valid_data.spacy
src/extraction/: skillsExtraction.py
src/postprocessing/: dataNormalization.py
src/preprocessing/: dataCleaning.py  dataConverter.py  gemini_AutoLabelling.py
src/scrape/: scrape.py
src/train/: train.py
src/utils/: DataCleaner.py  SemanticSim_Occupation.py  SemanticSim_Skills.py
src/validation/: FileValidation.py
src/web/: job_vs_salary.py  pie.py  run.py  search.py  top10.py
src/web/app/static/css/: main.css
src/web/app/static/js/: jobsalary.js  pie_chart.js  showHideAdd.js  showHideCore.js  wordcloud.js
src/web/app/static/json/: JobvsSalary.json  top10skills.json
src/web/app/templates/: index.html
static/css/: main.css
static/js/: chart.js  wordcloud.js
templates/: index.html
web/: app.py  job_vs_salary.py  search.py
web/app/static/js/: jobsalary.js  main.js  pie_chart.js  showHide.js  wordcloud.js
web/app/templates/: index.html
